<resources>
    <string name="app_name" translatable="false">Dragon Viewer</string>
    <string name="outline_title">Table of Contents</string>
    <string name="auto_crop">auto crop bound</string>
    <string name="create_pdf">Create PDF</string>
    <string name="export_image">Export Images</string>
    <string name="settings_title">Reading Settings</string>
    <string name="version">Version:%s</string>
    <string name="create_pdf_label">Create A PDF</string>
    <string name="menu_create">Create A PDF</string>
    <string name="menu_convert_epub">Convert To Epub</string>
    <string name="menu_encrypt_decrypt">Encrypt/Decrypt</string>
    <string name="create_pdf_select_old">Select old pdf</string>
    <string name="create_pdf_save">Save as pdf</string>
    <string name="create_pdf_select_old_tip">if donot has an old pdf,it will create one for you.</string>
    <string name="create_pdf_success">create pdf successfully</string>
    <string name="create_pdf_error">create pdf error</string>
    <string name="extract_title">Extract Images</string>
    <string name="extract_selection">Extract Selection</string>
    <string name="extract_current">Extract Current</string>
    <string name="extract_tip">Select resolution,default width=1080, max width=4000</string>
    <string name="extract_resolution">Extract Resolution</string>
    <string name="extract_page_range">Page Rang</string>
    <string name="extract_range">Rang</string>
    <string name="edit_save_success">Save success</string>
    <string name="edit_no_modification">No modification</string>
    <string name="edit_create_success">Create success</string>
    <string name="edit_create_error">Create pdf Failed!</string>
    <string name="edit_create_select_file">Select a file</string>
    <string name="edit_page">Page:%s</string>
    <string name="edit_cannot_load_pdf">Can not load pdf</string>
    <string name="edit_extract_success">Extract Success</string>
    <string name="edit_extract_error">Extract failed</string>
    <string name="edit_extract_cancel_pages">Cancel extract,already extract:%s"</string>
    <string name="edit_extract_not_impl">No implemention</string>
    <string name="edit_back">Back</string>
    <string name="edit_title">Edit pdf</string>
    <string name="reflow_title">Reflow pdf</string>
    <string name="edit_item_save">Save</string>
    <string name="edit_item_extract">Extract Images</string>
    <string name="create_title">Create pdf</string>
    <string name="create_use_image">Use image</string>
    <string name="create_use_txt">Use text</string>
    <string name="create_pdf_tip">Select text for creating pdf</string>
    <string name="create_btn_select_text">Select a text</string>
    <string name="create_text_path_tip">save path:/sdcard/book/ ,default name:new.pdf</string>
    <string name="create_text_name">the name of pdf</string>
    <string name="create_btn_text">Generate</string>
    <string name="create_btn_old_pdf">Select old pdf</string>
    <string name="create_old_pdf_tip">if you select an old pdf,then the new page will append to the old</string>
    <string name="create_image_name_hint">the name of the new pdf</string>
    <string name="create_image_btn_add_image">Add Image</string>
    <string name="create_image_btn_save">Save</string>
    <string name="create_epub_title">Convert To Epub</string>
    <string name="create_epub_tips">Convert Mobi, Azw to Epub, saved in the same Directory</string>
    <string name="create_epub_add_mobi">Add Mobi,Azw, Docx</string>
    <string name="create_epub_add_azw">Add Azw</string>
    <string name="create_epub_convert">Convert</string>
    <string name="create_epub_convert_success">Convert successfully</string>
    <string name="edit_btn_image">Extract images</string>
    <string name="edit_btn_merge">Merge</string>
    <string name="edit_btn_select">Select pdf</string>
    <string name="edit_select_tip">Select a pdf to extract images</string>
    <string name="edit_save_tip">extract images will be saved to /sdcard/pdfname/ , \\nExtrace image: a image for a page.\\nExtract html: generate a html,image will be encode with base64,can be open by browser</string>
    <string name="edit_extract_btn_image">Extract selection</string>
    <string name="edit_extract_btn_html">Extract Html</string>
    <string name="edit_extract_html">Extract Html</string>
    <string name="extract_btn_merge">Merge</string>
    <string name="edit_reflow_btn">Reflow</string>
    <string name="edit_reflow_page_range">Reflow range</string>
    <string name="edit_reflow_preview">Preview</string>
    <string name="edit_from_page">From:%s</string>
    <string name="edit_to_page">To:%s</string>
    <string name="webdav_title">Webdav config</string>
    <string name="encrypt_decrypt_title">Encrypt/Decrypt</string>
    <string name="encrypt_decrypt_tips">Pdf info</string>
    <string name="encrypt_decrypt_add">Select Pdf</string>
    <string name="encrypt_decrypt_encrypt">Encrypt</string>
    <string name="encrypt_decrypt_decrypt">Decrypt</string>
    <string name="encrypt_decrypt_file_path">File Path: %s</string>
    <string name="encrypt_decrypt_file_size">File Size: %s bytes</string>
    <string name="encrypt_decrypt_file_name">File Name: %s</string>
    <string name="encrypt_decrypt_page_count">Page Count: %s</string>
    <string name="encrypt_decrypt_format">Format: %s</string>
    <string name="encrypt_decrypt_title2">Title: %s</string>
    <string name="encrypt_decrypt_author">Author: %s</string>
    <string name="encrypt_decrypt_subject">Subject: %s</string>
    <string name="encrypt_decrypt_keywords">Keywords: %s</string>
    <string name="encrypt_decrypt_creator">Creator: %s</string>
    <string name="encrypt_decrypt_producer">Producer: %s</string>
    <string name="encrypt_decrypt_creation_date">Creation Date: %s</string>
    <string name="encrypt_decrypt_modification_date">Modification Date: %s</string>
    <string name="encrypt_decrypt_encrypted">Encrypted: %s</string>
    <string name="encrypt_decrypt_error_read_pdf">Error: Failed to read PDF information - %s</string>
    <string name="encrypt_decrypt_select_pdf_first">Please select a PDF file first</string>
    <string name="encrypt_decrypt_input_pwd">Please input password</string>
    <string name="encrypt_decrypt_encrypt_success">Encrypt successfully\n%s</string>
    <string name="encrypt_decrypt_encrypt_failed">Encrypt failed</string>
    <string name="encrypt_decrypt_decrypt_success">Decrypt successfully\n%s</string>
    <string name="encrypt_decrypt_decrypt_failed">Decrypt failed</string>
    <string name="waiting">Waiting...</string>
    <string name="split_title">Split Pdf</string>
    <string name="split_pdf_to_split">Please select a PDF file to split</string>
    <string name="split_rule">Split Rule</string>
    <string name="split_pdf_info">File Info</string>
    <string name="split_rule_desc">eg.1-10,11-20, split 2 pdf, page 1 to page 10, and page 11 to 20</string>
    <string name="split_out_setting">Out Setting</string>
    <string name="split_out_name">PDF Name</string>
    <string name="split_doing">Spliting...</string>
    <string name="split_start">Start Spliting</string>
    <string name="split_input_rule">Input Split Rule</string>
    <string name="split_out_name_tip">Input Pdf Name</string>
    <string name="split_success">Split Successfully！Save to: %s</string>
    <string name="split_error">Split Error，Please check input rule.</string>
    <string name="merge_title">Merge Pdf</string>
    <string name="merge_btn">Merge Pdf</string>
    <string name="merge_pdf_to_split">Please select more than 1 PDF file to Merge</string>
    <string name="merge_success">Merge Successfully！Save to: %s</string>
    <string name="merge_error">Merge Error!</string>
    <string name="merge_select_pdf">Select Pdf</string>
    <string name="merge_selected_count">Selected %1$s files</string>
    <string name="merge_doing">Merging...</string>
    <string name="merge_out_name">Merged.pdf</string>
    <string name="convert_title">Convert to Epub</string>
    <string name="convert_tip">mobi, azw3 convert to epub</string>
    <string name="convert_btn">Convert</string>
    <string name="convert_to_filename">Epub name</string>
    <string name="convert_select_file">Select File</string>
    <string name="convert_enter_epub_filename">Enter Epub Name</string>
    <string name="convert_select_to_create_epub">Please select mobi, azw3</string>
    <string name="convert_doing">Converting...</string>
    <string name="convert_successfully">Convert successfully %1$s, Saved to:%2$s</string>
    <string name="convert_error">Convert failed!</string>
    <string name="grant_files_permission">grant file permission</string>
    <string name="grant_all_files_permission">grant all files permission</string>
    <string name="grantfailed">grant failed</string>
    <string name="grant_cancel">cancel grant</string>
    <string name="grant_ok">grant</string>
    <string name="toast_set_as_home">Please Set Book Directory</string>
    <string name="about_title" translatable="false">About Dragon Viewer</string>
    <string name="about_commmon_title">"Application info"</string>
    <string name="about_3dparty_title">"3rd party software"</string>
    <string name="about_changelog_title">"3rd party software"</string>
    <string name="label_filename">FileName：</string>
    <string name="label_filesize">FileSize：</string>
    <string name="label_read">LastRead：</string>
    <string name="label_lastmodified">LastModified：</string>
    <string name="label_pagecount">read page：</string>
    <string name="label_location">Location：</string>
    <string name="label_read_count">Read Counts：</string>
    <string name="menu_vudroid">Open with Vudroid</string>
    <string name="menu_mupdf">Open with AMupdf(NO Crop)</string>
    <string name="menu_new_mupdf">Open with new viewer</string>
    <string name="menu_other">Open with Other App</string>
    <string name="menu_edit">Edit Pdf</string>
    <string name="menu_info">View File Info</string>
    <string name="menu_remove_from_recent">Remove from recent</string>
    <string name="menu_remove_and_clear">Remove and clear</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_add_to_fav">Add To Favorites</string>
    <string name="menu_remove_from_fav">Remove from Favorites</string>
    <string name="menu_album">View as Album</string>
    <string name="menu_set_home">Set as Home</string>
    <string name="dialog_title_backup">Select Backup</string>
    <string name="dialog_sub_title_backup">Select Backup file to restore</string>
    <string name="search">Search&#x2026;</string>
    <string name="searching_">Searching&#x2026;</string>
    <string name="text_not_found">Text not found</string>
    <string name="search_file">Files</string>
    <string name="search_history">History</string>
    <string name="search_favorite">Favorite</string>
    <string name="empty_title">NO History</string>
    <string name="empty_subtitle">Start Reading some book</string>
    <string name="sodk_editor_password_for_document">Password</string>
    <string name="sodk_editor_ok">OK</string>
    <string name="sodk_editor_cancel">cancel</string>
    <string name="show_as_dir">Show images for dir？</string>
    <string name="show_as_dir_ok">Show</string>
    <string name="show_as_dir_cancel">No</string>
    <string name="feature_title">Features</string>
    <string name="feature_auto_crop">Auto Crop</string>
    <string name="feature_multi_format">Multi-format Support</string>
    <string name="feature_ocr">OCR Text Recognition</string>
    <string name="feature_image_to_pdf">Image to PDF</string>
    <string name="feature_mobi_azw3_to_pdf">Mobi/Azw3 to PDF</string>
    <string name="feature_pdf_encrypt_decrypt">PDF Encrypt/Decrypt</string>
    <string name="feature_webdav_backup">WebDAV Backup</string>
    <string name="feature_tts_read">TTS Reading</string>
</resources>